--- a/web/css/my.css
+++ b/web/css/my.css
@@ -1,3 +1,6 @@
+.inicio_menu.html{
+  background-image: url(\desktop\imagem.jpg);  
+}
 .footer {
   position: absolute;
   bottom: -80px;
@@ -25,5 +28,8 @@
     display: table;
     margin: 0 auto;
 }
-
-
+#div_respostas{
+    display: table;
+    margin: 0 auto;
+    
+}
