--- a/web/css/my.css
+++ b/web/css/my.css
@@ -27,6 +27,10 @@
 }
 #div_respostas{
     display: table;
-    margin: 0 auto;
-    
+    margin: 0 auto;   
+}
+
+#div_iniciar_jogo{
+    display: table;
+    margin: 0 auto;  
 }
