--- a/web/css/my.css
+++ b/web/css/my.css
@@ -1,11 +1,11 @@
-.footer {
-  position: absolute;
-  bottom: -80px;
-  width: 100%;
-  height: 60px;
-  text-align: center;
-  line-height: 60px;
-  background-color: #000;
+
+
+.footer{
+    width: 100%;
+    background-color: #000;
+    padding: 20px 80px;
+    color: white;
+    text-align: center;
 }
 
 .letraBranca{
@@ -37,5 +37,11 @@
 
 #div_escolha_multipla{
     display: table;
-    margin: 0 auto;  
+    margin: 0 auto; 
+}
+
+.divpontuacoes{
+    border: 5px solid grey;
+    margin: 25px 50px 10px 10px;
+    padding-left: 20px;
 }
