--- a/web/css/my.css
+++ b/web/css/my.css
@@ -1,6 +1,3 @@
-.inicio_menu.html{
-  background-image: url(\desktop\imagem.jpg);  
-}
 .footer {
   position: absolute;
   bottom: -80px;
@@ -28,8 +25,30 @@
     display: table;
     margin: 0 auto;
 }
-#div_respostas{
+#div_respostas_multiplo{
     display: table;
     margin: 0 auto;
-    
+    display: block; 
+    margin:30px;
+    width:200px ;
+    height: 100px;
+    font-size: 35px;
+}
+#div_respostas_boolean{
+    display: table;
+    margin: 0 auto;
+    display: block; 
+    margin:30px;
+    width:200px ;
+    height: 100px;
+    font-size: 35px;
+}
+#div_escolher_categoria{
+    display: table;
+    margin: 0 auto;
+    display: block; 
+    margin:30px;
+    width:200px ;
+    height: 100px;
+    font-size: 35px;
 }
