--- a/web/css/my.css
+++ b/web/css/my.css
@@ -6,6 +6,20 @@
     text-align: center;
 }
 
+.footer2{
+  position: absolute;
+  bottom: -80px;
+  width: 100%;
+  height: 60px;
+  text-align: center;
+  line-height: 60px;
+  background-color: #000;
+}
+
+#contentor{
+    height: 86vh;
+}
+
 .letraBranca{
     color: #fff;
 }
@@ -66,4 +80,11 @@
     border: 5px solid grey;
     margin: 25px 50px 10px 10px;
     padding-left: 20px;
+}
+
+.butoesCategoria{
+    /*margin:30px;*/
+    width:200px;
+    /*height: 100px;*/
+    font-size: 25px;
 }
