--- a/web/css/my.css
+++ b/web/css/my.css
@@ -82,6 +82,13 @@
     padding-left: 20px;
 }
 
+.divsFavQuestions{
+    border: 5px solid grey;
+    margin: 25px 50px 10px 10px;
+    padding-left: 20px;
+    overflow:hidden ;
+}
+
 .butoesCategoria{
     /*margin:30px;*/
     width:200px;
