--- a/web/css/my.css
+++ b/web/css/my.css
@@ -1,4 +1,6 @@
 .footer{
+    position: fixed;
+    bottom: 0px;
     width: 100%;
     background-color: #000;
     padding: 20px 80px;
@@ -17,7 +19,8 @@
 }
 
 #contentor{
-    height: 86vh;
+    height: 85vh;
+    
 }
 
 .letraBranca{
@@ -29,11 +32,13 @@
 }
 
 #div_butoes_inicio_menu{
+    text-align: -webkit-center;
     display: table;
     margin: 0 auto;
 }
 
 #div_escolher_dificuldade{
+    text-align: -webkit-center;
     display: table;
     margin: 0 auto;
 }
@@ -59,14 +64,16 @@
     display: table;
     margin: 0 auto;
     display: block; 
-    margin:30px;
-    width:200px ;
-    height: 100px;
+    margin:60px;
+    width: 400px;
+    height: 150px;
+    text-align: center;
     font-size: 35px;
     margin: 0 auto;   
 }
 
 #div_iniciar_jogo{
+    text-align: center; 
     display: table;
     margin: 0 auto;  
 }
@@ -85,6 +92,13 @@
 .divsFavQuestions{
     border: 5px solid grey;
     margin: 25px 50px 10px 10px;
+    padding-left: 20px;
+    overflow:hidden ;
+}
+
+.divsFavQuestions:last-child{
+    border: 5px solid grey;
+    margin: 25px 50px 80px 10px;
     padding-left: 20px;
     overflow:hidden ;
 }
