--- a/web/css/my.css
+++ b/web/css/my.css
@@ -17,27 +17,11 @@
 }
 
 #contentor{
-<<<<<<< HEAD
-<<<<<<< HEAD
     width: 2000px;
     height: 86vh;
     background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
     color: white;
     opacity: 0.95;
-=======
-    height: 86vh;
-=======
-    height: 86vh;
->>>>>>> parent of a11c2d9... Changing Main Page
-    background: red; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(red, yellow); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(red, yellow); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(red, yellow); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(red, yellow); /* Standard syntax (must be last) */
-<<<<<<< HEAD
->>>>>>> parent of 09edea6... Merge branch 'master' of https://github.com/Melicias/triviaipl
-=======
->>>>>>> parent of a11c2d9... Changing Main Page
 }
 
 .letraBranca{
@@ -127,4 +111,17 @@
     border: 1px solid transparent;
     border-radius: 4px;
     float:right;
+}
+.letraBranca{
+    border: 1px solid transparent;
+    border-radius: 4px;
+    float:right;
+}
+.navbar{
+   margin-bottom: 0px;
+}
+.btn-primari {
+    color: #000;
+    background-color: #ffffff;
+    border-color: #000000;
 }
