--- a/web/css/my.css
+++ b/web/css/my.css
@@ -22,6 +22,8 @@
     background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
     color: white;
     opacity: 0.95;
+    text-align: -webkit-center;
+
 }
 
 .letraBranca{
